gwangju/1st/src/k8s/argocd/red/gitops-red/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: red-svc
  namespace: skills
spec:
  type: NodePort
  selector:
    app: red
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
